--- a/css/case.less
+++ b/css/case.less
@@ -128,7 +128,7 @@ body{
     }
     span{
       display: block;
-      line-height: 57/@rem;
+      //line-height: 57/@rem;
       width:100%;
       color:#909291;
     }
